<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nanodegree_apps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/nanodegree_apps_heading" />

    <Button
        android:id="@+id/spotify_streamer_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nanodegree_apps_label"
        android:text="@string/app_name_one" />

    <Button
        android:id="@+id/scores_app_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spotify_streamer_button"
        android:text="@string/app_name_two" />

    <Button
        android:id="@+id/library_app_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scores_app_button"
        android:text="@string/app_name_three" />

    <Button
        android:id="@+id/build_it_bigger_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/library_app_button"
        android:text="@string/app_name_four" />

    <Button
        android:id="@+id/xyz_reader_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/build_it_bigger_button"
        android:text="@string/app_name_five"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/capstone_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/xyz_reader_button"
        android:text="@string/app_name_six" />

</RelativeLayout>
